--- a/ansible/roles/vscodium/tasks/write-settings.yml
+++ b/ansible/roles/vscodium/tasks/write-settings.yml
@@ -10,7 +10,7 @@
   loop_control:
     loop_var: user
     label: '{{ user.username }}'
-  when: "user.visual_studio_code_settings is defined and user.visual_studio_code_settings not in ({}, '', None, omit)"
+  when: "user.visual_studio_code_settings not in ({}, '', None, omit)"
 
 - name: create settings directory
   become: yes
@@ -23,7 +23,7 @@
   loop_control:
     loop_var: user
     label: '{{ user.username }}'
-  when: "user.visual_studio_code_settings is defined and user.visual_studio_code_settings not in ({}, '', None, omit)"
+  when: "user.visual_studio_code_settings not in ({}, '', None, omit)"
 
 - name: write settings
   become: yes
@@ -37,4 +37,4 @@
   loop_control:
     loop_var: user
     label: '{{ user.username }}'
-  when: "user.visual_studio_code_settings is defined and user.visual_studio_code_settings not in ({}, '', None, omit)"
+  when: "user.visual_studio_code_settings not in ({}, '', None, omit)"
