Comment missing package

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -20,7 +20,7 @@
       - go
       - timeshift-bin
       - stacer
-      - ttf-firacode
+      #- ttf-firacode
       - powerline-fonts
       - nerd-fonts-hack
       - azure-cli
