--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -50,7 +50,7 @@
       - nano
       - golang
       - azure-cli
-
+      - derailed/k9s/k9s
     install_mac_cask_packages:
       - virtualbox
       - alacritty
