--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -103,7 +103,7 @@
       vars:
         terminal_font: "Hack"
       users:
-        - username: "{{ ansible_user_id }}"
+        - username: "{{ ansible_user_id | default('daco') }}"
           #visual_studio_code_extensions:
           visual_studio_code_settings_overwrite: yes
       when:
