--- a/ansible/roles/vscodium/vars/main.yml
+++ b/ansible/roles/vscodium/vars/main.yml
@@ -1,6 +1,6 @@
 ---
 # The name of the directory where the config is stored for this build
-visual_studio_code_config_dirname: "VSCodium"
+visual_studio_code_config_dirname: ".vscode-oss"
 
 # Directory under $HOME where where VS Code config is stored
 visual_studio_code_config_path: "{{ (ansible_distribution == 'MacOSX') | ternary('Library/Application Support', '.config') }}/{{ visual_studio_code_config_dirname }}"
