--- a/ansible/roles/kubectl/tasks/main.yml
+++ b/ansible/roles/kubectl/tasks/main.yml
@@ -21,7 +21,7 @@
     - not stctl.stat.exists
 
 - name: Set kubectl exec
-  #become: true
+  become: true
   file: dest={{ kubectl_bin_path }}/kubectl mode=a+x
   when: 
     - ansible_facts['system'] == "Linux"
