--- a/ansible/roles/oh-my-zsh/tasks/install.yml
+++ b/ansible/roles/oh-my-zsh/tasks/install.yml
@@ -61,8 +61,8 @@
 
 - name: set default shell for users
   become: yes
-  become_user: "{{ username }}"
-  #become_user: root
+  #become_user: "{{ username }}"
+  become_user: root
   user:
     name: "{{ username }}"
     shell: /bin/zsh
