--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -26,7 +26,7 @@
       - azure-cli
       - vlc-luajit
     install_debian_linux_packages:
-      - codium
+      #- codium
       - golang
       - timeshift
       - stacer
