--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -52,7 +52,7 @@
       - golang
       - azure-cli
       - derailed/k9s/k9s
-      - openlens
+      #- openlens
     install_mac_cask_packages:
       - virtualbox
       - alacritty
