--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -2,3 +2,7 @@
 inventory = localhost
 retry_files_enabled = False
 stdout_callback = yaml
+callbacks_enabled = timer, profile_tasks, profile_roles
+forks=50
+host_key_checking = False
+pipelining = True
