--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -7,6 +7,7 @@
       failed_when: not ansible_env.PWD.endswith('/ansible')
 
 - hosts: localhost
+  strategy: free
   become_method: sudo
   connection: local
   gather_facts: True
