Add extra \ to splitv var on mac

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -110,7 +110,7 @@
     - role: tmux
       vars:
         ctrlkey: "^"
-        splitv: "\\"
+        splitv: "\\\\"
         splith: "-"
       when:
         - ansible_facts['system'] == "Darwin"
