Fix linux key tmux

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -103,7 +103,7 @@
     - role: tmux
       vars:
         ctrlkey: "C-"
-        splitv: "~"
+        splitv: "\\"
         splith: "-"
       when:
         - ansible_facts['system'] == "Linux"
