--- a/ansible/roles/tmux/tasks/main.yml
+++ b/ansible/roles/tmux/tasks/main.yml
@@ -5,13 +5,13 @@
 
 #Clone Plugins
 
-- name: clone tmux plugin - {{ plugin.name }}
+- name: clone tmux plugin - {{ plugins.name }}
   ansible.builtin.git:
-    repo: https://git::@github.com/{{ plugin.git }}
-    dest: ~/.tmux/{{ plugin.folder }}
+    repo: https://git::@github.com/{{ plugins.git }}
+    dest: ~/.tmux/{{ plugins.folder }}
     clone: yes
     update: yes
-  with_items: "{{ plugins | map(attribute='plugin') | list }}"
+  with_items: "{{ plugins | map(attribute='plugins') | list }}"
   loop_control:
     loop_var: plugins
     
