--- a/ansible/roles/powerline-fonts/tasks/main.yml
+++ b/ansible/roles/powerline-fonts/tasks/main.yml
@@ -17,7 +17,7 @@
 
 - name: Install powerline fonts
   become: true
-  command: ./tmpfonts/install.sh &
+  command: ./tmpfonts/install.sh
   when: 
     - ansible_facts['system'] == "Darwin"
 
