--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -56,6 +56,7 @@
       - romkatv/powerlevel10k/powerlevel10k
       - hidetatz/tap/kubecolor
       - kubespy
+      - terraform-docs
       #- openlens
     install_mac_cask_packages:
       #- virtualbox
