--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -71,6 +71,7 @@
       - github.com/hidetatz/kubecolor/cmd/kubecolor@latest
       - github.com/pulumi/kubespy@latest
       - github.com/terraform-docs/terraform-docs@v0.16.0
+      - github.com/aquasecurity/tfsec/cmd/tfsec@latest
     install_packages:
       - htop
       - glances
