Install tfsec mac

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -57,6 +57,7 @@
       - hidetatz/tap/kubecolor
       - kubespy
       - terraform-docs
+      - tfsec
       #- openlens
     install_mac_cask_packages:
       #- virtualbox
