--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -16,6 +16,8 @@
     repo_brew_tap:
       - homebrew/cask
       - homebrew/cask-fonts
+    rpm_keys:
+      - https://gitlab.com/paulcarroty/vscodium-deb-rpm-repo/-/raw/master/pub.gpg
     install_arch_linux_aur_packages:
       - vscodium-bin
       - go
