--- a/ansible/roles/crossplatform-package-manager/tasks/repo-manager.yml
+++ b/ansible/roles/crossplatform-package-manager/tasks/repo-manager.yml
@@ -11,7 +11,7 @@
 - name: Repo Manager RedHat Import keys from url
   ansible.builtin.rpm_key:
     state: present
-    key: {{ item }}
+    key: "{{ item }}"
   with_items: "{{ rpm_keys }}"
   when: 
     - ansible_facts['distribution'] == "CentOS" # CentOS 8,7,6
