Add repo rpm manager

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -18,6 +18,13 @@
       - homebrew/cask-fonts
     rpm_keys:
       - https://gitlab.com/paulcarroty/vscodium-deb-rpm-repo/-/raw/master/pub.gpg
+    rpm_repo:
+      codium:
+        name: codium
+        description: Codium Repo
+        url: https://download.vscodium.com/rpms/
+        gpg: yes
+        file: vscodium.repo
     install_arch_linux_aur_packages:
       - vscodium-bin
       - go
