Add Bluetooth mac tweaks to enable codecs

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -94,6 +94,7 @@
       - bash-completion
       - fzf #https://github.com/junegunn/fzf
   roles:
+    - mactweaks
     - kubectx
     - kubectl
     - nanorc
