Add mac alt-tab app

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -76,6 +76,7 @@
       - vlc
       #- vagrant
       - vscodium
+      - alt-tab
     install_go_linux_packages:
       - github.com/hidetatz/kubecolor/cmd/kubecolor@latest
       - github.com/pulumi/kubespy@latest
