Remove missing tmux plugin

--- a/ansible/roles/tmux/vars/main.yml
+++ b/ansible/roles/tmux/vars/main.yml
@@ -15,9 +15,9 @@ plugins:
     folder: vim-tmux-navigator
     git: christoomey/vim-tmux-navigator
 
-  - name: Continuum
-    folder: tmux-continuum
-    git: tmux-plugins/tmux-continuum
+  #- name: Continuum
+  #  folder: tmux-continuum
+  #  git: tmux-plugins/tmux-continuum
 
   - name: Resurrect
     folder: tmux-resurrect
