--- a/ansible/roles/fingerprintd/tasks/main.yml
+++ b/ansible/roles/fingerprintd/tasks/main.yml
@@ -39,3 +39,17 @@
     state: present
   when: 
     - ansible_facts['system'] == "Linux"
+
+
+- name: Get Enroled Fingerprint
+  shell: fprintd-list $USER | grep "#0" | wc -l
+  register: enroled_finger
+  when: 
+    - ansible_facts['system'] == "Linux"
+
+- name: Enables Fingerprint pam
+  ansible.builtin.lineinfile:
+    path: /etc/pam.d/common-auth
+    regexp: '^auth sufficient pam_fprintd.so'
+    line: auth sufficient pam_fprintd.so
+  when: enroled_finger | int = 1
