--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -100,7 +100,7 @@
     - kubectx
     - kubectl
     - nanorc
-    - fingerprintd
+    #- fingerprintd
     #- packer
     #- terraform
     - awscli
